feat:add header content

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
             <li><a href = #>Link Three</a></li>
         </ul>
     </div>
+
+    <div class = "header-content-container">
+        <div class = "header-content">
+            <div class = "content-header">This website is awesome</div>
+            <div class = "subtext">This website has some subtext that does here under the main title. It's smaller font and the color is lower contrast</div>
+            <button>Sign Up</button>
+        </div>
+        <img src = "images/calculator-header.jpg" alt = "black calculator">
+    </div>
+    
 </body>
 </html>
