--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
         </div>
         <img src = "images/calculator-header.jpg" alt = "black calculator">
     </div>
+    <div class ="info-container">
+        <div class="header1">Some random information</div>
+        <div class = "cards">
+            <div class = "card">
+                <img>
+                <div>this is some subtext</div>
+            </div>
+            <div class = "card">
+                <img>
+                <div>this is some subtext</div>
+            </div>
+            <div class = "card">
+                <img>
+                <div>this is some subtext</div>
+            </div>
+            <div class = "card">
+                <img>
+                <div>this is some subtext</div>
+            </div>
+        </div>
+    </div>
+    <div class = "quote-container">
+        <div class = "quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+            will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class = "quote-author">
+            -Thor, God of Thunder
+        </div>
+    </div>
     
 </body>
 </html>
