feat:add call to action and footer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
             -Thor, God of Thunder
         </div>
     </div>
+    <div class = "call-container">
+        <div class = "call">
+            <h2>Call to action! It's time</h2>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign Up</button>
+    </div>
+    <div class = "footer">
+        <div>Copyright © The Odin Project 2021</div>
+    </div>
     
 </body>
 </html>
